--- a/client/styles.css
+++ b/client/styles.css
@@ -1,3 +1,13 @@
 .center {
   text-align: center;
 }
+.right {
+  text-align: right;
+}
+.comments {
+  width: 90%;
+}
+.line {
+  margin-right: 25px;
+  margin-left: 25px;
+}
